[package]
name = "envload"
version = "0.1.1"
edition = "2021"
description = "Automatically fill structs from env variables"
license = "MIT"
documentation = "https://docs.rs/envload"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
envload_derive = { path = "./envload_derive", version = "0.1.0" }
thiserror = "1.0.31"
