[package]
name = "envload_derive"
version = "0.1.1"
edition = "2021"
description = "Derive macro for envload"
license = "MIT"
documentation = "https://docs.rs/envload_derive"

[lib]
proc-macro = true

[dependencies]
convert_case = "0.5.0"
proc-macro2 = "1.0.39"
quote = "1.0.18"
syn = { version = "1.0.95", features = ["full", "extra-traits"] }
